--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "** Due 11:59pm PT Thu Oct 28 **",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "Brett Ritter <swiftone@swiftone.org>",
